ui-nodejs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: albumui
  name: albumui
  annotations:
    openshift.io/display-name: "Album App"
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: albumui
  strategy: {}
  template:
    metadata:
      labels:
        deployment: albumui
    spec:
      containers:
      - image: 'quay.io/keomizo_redhat/albumui-nodejs:latest'
        name: albumui
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
