ui-nodejs/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/display-name: "Album App"
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: albumui
  name: albumui
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: albumui
